# modulesAndInterfaces

./: CMakeLists.txt  README
src/: main.cpp  myModule.cppm  myModule.interface.cppm  myModule.partition1.cpp  myModule.partition1.cppm  myModule.partition2.cpp  myModule.partition2.cppm
